[project]
name = "mip-cmor-tables"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TROUSSELLIER Laurent", email = "laurent.troussellier@ipsl.fr" }
]
dependencies = [
    "pyld>=2.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mip_cmor_tables"]
